@@ -32,10 +32,14 @@
 #define USB_DEVICE_AVRDRAGON   0x2107
 #define USB_DEVICE_JTAGICE3    0x2110
 
-/* JTAGICEmkII */
+/* JTAGICEmkII, AVRISPmkII */
 #define USBDEV_BULK_EP_WRITE_MKII 0x02
 #define USBDEV_BULK_EP_READ_MKII  0x82
 #define USBDEV_MAX_XFER_MKII 64
+
+/* STK600 */
+#define USBDEV_BULK_EP_WRITE_STK600 0x02
+#define USBDEV_BULK_EP_READ_STK600 0x83
 
 /* JTAGICE3 */
 #define USBDEV_BULK_EP_WRITE_3    0x01
